--- a/notebooks/lv/tests/surface_identification_test.ipynb
+++ b/notebooks/lv/tests/surface_identification_test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -45,7 +45,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "051bad45d74b451ea6c5ff456231bbb6",
+       "model_id": "048cae11eee0424e987616fd1ee3c6d4",
        "version_major": 2,
        "version_minor": 0
       },
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,13 +92,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "40fb7acb13e14fb0b3c23148421b8e3b",
+       "model_id": "114375d308b54a23a15070c92e268810",
        "version_major": 2,
        "version_minor": 0
       },
@@ -122,13 +122,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "39094ed65e5a4c09888155528988fcf7",
+       "model_id": "8e1efb05e9a4451298139bf171c932a1",
        "version_major": 2,
        "version_minor": 0
       },
@@ -148,6 +148,15 @@
     "          (LV_VIRTUAL_NODES.AORTIC_BORDER, \"purple\"),\n",
     "          ],\n",
     "        cmap=\"tab20_r\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lv.mesh.save(\"../sample_files/lvtetmesh.vtk\")"
    ]
   }
  ],
