working on 'compute_fibers' and related methods

--- a/notebooks/lv/tests/surface_identification.ipynb
+++ b/notebooks/lv/tests/surface_identification.ipynb
@@ -34,7 +34,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9753512d6b284d00b4505cb522dfc44b",
+       "model_id": "a8b4acc3c37542c6a70d02237191a231",
        "version_major": 2,
        "version_minor": 0
       },
@@ -82,8 +82,28 @@
    "outputs": [
     {
      "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "1 in lv._nodesets"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9c62b691423546c8b3ccb8cb193960b9",
+       "model_id": "f85231db5f264042b208db684ada3279",
        "version_major": 2,
        "version_minor": 0
       },
@@ -107,13 +127,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b3e5414b6ecc4784acac8c9ad2dc29a0",
+       "model_id": "27759f9b10494948b75e81efbc9e308f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -137,13 +157,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "13ed380f3db34a51a30373611ff18e06",
+       "model_id": "14ba6e6fa9bf4366992af96a8b42c0bd",
        "version_major": 2,
        "version_minor": 0
       },
@@ -163,13 +183,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1eb91dfa292e416a988a2942af2ca756",
+       "model_id": "4d4d9d230a4b43adb68effd8af9de1fa",
        "version_major": 2,
        "version_minor": 0
       },
@@ -188,13 +208,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "38a52505f4d04089a42bcc49636ecd6f",
+       "model_id": "ef174bdaa312476294c3732981e87fd2",
        "version_major": 2,
        "version_minor": 0
       },
@@ -221,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -230,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -239,13 +259,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b89a9f632e5e4aeb9f7e23e0506e8390",
+       "model_id": "53fd547aedde4ea8bef1fa7ac1ab838c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -261,6 +281,199 @@
     "lv.plot(\"mesh\", scalars=\"TESTCAT\", \n",
     "        cat_exclude_zero=True,\n",
     "        cmap=\"Set2\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Testing nodesets"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "1f08668610914bce86dba5ba0050f06b",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Renderer(camera=PerspectiveCamera(aspect=1.3333333333333333, children=(DirectionalLight(color='#fefefe', posit…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "APEX = lv.get_nodeset(LV_SURFS.APEX_REGION)\n",
+    "BASE = lv.get_nodeset(LV_SURFS.BASE_REGION)\n",
+    "APEX_BASE = np.zeros(lv.mesh.n_points)\n",
+    "APEX_BASE[APEX] = LV_SURFS.APEX_REGION\n",
+    "APEX_BASE[BASE] = LV_SURFS.BASE_REGION\n",
+    "\n",
+    "lv.mesh.point_data[\"APEX_BASE_TEST\"] = APEX_BASE\n",
+    "lv.plot(scalars=\"APEX_BASE_TEST\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "f64aa59866a74caabed465773886be94",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Renderer(camera=PerspectiveCamera(aspect=1.3333333333333333, children=(DirectionalLight(color='#fefefe', posit…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "endo = lv.get_nodeset(LV_SURFS.ENDO)\n",
+    "epi = lv.get_nodeset(LV_SURFS.EPI)\n",
+    "endo_epi = np.zeros(lv.mesh.n_points)\n",
+    "endo_epi[endo] = LV_SURFS.ENDO\n",
+    "endo_epi[epi] = LV_SURFS.EPI\n",
+    "\n",
+    "lv.mesh.point_data[\"ENDO_EPI_TEST\"] = endo_epi\n",
+    "lv.plot(scalars=\"ENDO_EPI_TEST\", cmap=\"jet\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "3c2f79ed3b4946d5bfbe15aeeb22ff36",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Renderer(camera=PerspectiveCamera(aspect=1.3333333333333333, children=(DirectionalLight(color='#fefefe', posit…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "endo = lv.get_nodeset(LV_SURFS.ENDO)\n",
+    "epi = lv.get_nodeset(LV_SURFS.EPI)\n",
+    "mitral = lv.get_nodeset(LV_SURFS.MITRAL)\n",
+    "aortic = lv.get_nodeset(LV_SURFS.AORTIC)\n",
+    "\n",
+    "test_regions = np.zeros(lv.mesh.n_points)\n",
+    "test_regions[endo] = LV_SURFS.ENDO\n",
+    "test_regions[epi] = LV_SURFS.EPI\n",
+    "test_regions[mitral] = LV_SURFS.MITRAL\n",
+    "test_regions[aortic] = LV_SURFS.AORTIC\n",
+    "\n",
+    "lv.mesh.point_data[\"TEST\"] = test_regions\n",
+    "lv.plot(scalars=\"TEST\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "58be9f0a95564cb6836fab9d7cb76117",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Renderer(camera=PerspectiveCamera(aspect=1.3333333333333333, children=(DirectionalLight(color='#fefefe', posit…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "endo = lv.get_nodeset(LV_SURFS.ENDO)\n",
+    "epi = lv.get_nodeset(LV_SURFS.EPI)\n",
+    "mitral = np.union1d(lv.get_nodeset(LV_SURFS.EPI_MITRAL), lv.get_nodeset(LV_SURFS.BORDER_MITRAL))\n",
+    "aortic = lv.get_nodeset(LV_SURFS.BORDER_AORTIC)\n",
+    "\n",
+    "test_regions = np.zeros(lv.mesh.n_points)\n",
+    "test_regions[endo] = LV_SURFS.ENDO\n",
+    "test_regions[epi] = LV_SURFS.EPI\n",
+    "test_regions[mitral] = LV_SURFS.MITRAL\n",
+    "test_regions[aortic] = LV_SURFS.AORTIC\n",
+    "\n",
+    "lv.mesh.point_data[\"TEST\"] = test_regions\n",
+    "lv.plot(scalars=\"TEST\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Testing Fiber modes (for surface identification)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([2., 2., 2., ..., 0., 0., 0.]), array([2., 2., 2., ..., 0., 0., 0.]))"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lv.identify_fibers_region_ids_ldrb(LV_FIBER_MODES.LDRB_1)\n",
+    "# lv.plot(scalars=LV_MESH_DATA.LDRB_1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "c20e3081de9042e6af6567151f41a44c",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Renderer(camera=PerspectiveCamera(aspect=1.3333333333333333, children=(DirectionalLight(color='#fefefe', posit…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "lv.plot(scalars=LV_MESH_DATA.LDRB_1.value, cmap=\"hsv\")"
    ]
   }
  ],
